--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,14 +4,14 @@ on: [push]
 
 jobs:
   build:
-    runs-on: arch
+    runs-on: arch-latest
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
       run: |
-        sudo pacman -Syu --noconfirm
+          sudo pacman -Syu --noconfirm
           sudo pacman -S --noconfirm base-devel \
           bc \
           bison \
